--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -27,231 +27,65 @@ permissions:
   issues: write # コメントトリガーの場合に推奨
 
 jobs:
-  terraform: # ジョブ名をより一般的なものに変更
-    runs-on: ubuntu-latest # 実行環境としてUbuntuの最新版を使用
-
-    env:
-      # AWS認証情報をGitHub Secretsから環境変数として設定
-      # これらのSecretsはリポジトリの設定で事前に登録しておく必要があります。
-      # この認証情報には、Terraform実行に必要なAWSリソースへの権限と、
-      # Remote State (S3+DynamoDBなど) へのアクセス権限が必要です。
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }} # ★修正★ secrets.secrets を secrets に修正
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # ★修正★ secrets.secrets を secrets に修正
-      AWS_REGION: ap-northeast-1 # 使用するAWSリージョンを指定 (例: 東京リージョン)
-
+  terraform:
+    name: 'Terraform Checks'
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        # stg, prodは未使用のため一旦コメントアウト
+        # directory: ['environments/dev', 'environments/stg', 'environments/prod']
+        directory: ['environments/dev']
+    defaults:
+      run:
+        working-directory: ${{ matrix.directory }}
     steps:
-      # -- コードチェックアウト --
-      # リポジトリのコードをランナー環境にクローンします。
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+
+      - name: Setup AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          # プッシュ/PR時はデフォルト、コメント時はPRのHEADリファレンスをチェックアウト
-          # fetch-depth: 0 は差分比較のために全履歴を取得します。
-          ref: ${{ github.event_name == 'issue_comment' && github.event.issue.pull_request.head.ref || github.ref }}
-          fetch-depth: 0
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-northeast-1
 
-      # --- .tf ファイルの変更を検知 ---
-      # プッシュまたはPRイベントが発生する場合、dorny/paths-filter アクションを使用して、特定のパス/パターンのファイルに変更があったかチェックします。
-      - name: Check for .tf file changes
-        id: check-tf-changes # 後続ステップで結果を参照するためのID
-        uses: dorny/paths-filter@v3 # paths-filter アクションを使用します。
-        # ★条件★ プッシュ または PR イベントの場合のみこのステップを実行します。
-        # issue_comment イベントでは、ファイル変更検知は不要で、コメント内容のチェックを優先します。
-        if: (github.event_name == 'push' || github.event_name == 'pull_request') # ★修正★ if条件にカッコを追加
-        with:
-          # 変更を検知したいファイルのパターンを設定します。
-          # tf-changes という名前で出力され、変更があれば 'true'、なければ 'false' になります。
-          filters: |
-            tf-changes: # 出力変数名 (steps.check-tf-changes.outputs.tf-changes で参照)
-              - '**/*.tf' # リポジトリ内の任意の場所にある .tf ファイル
+      - name: Terraform Format
+        id: fmt
+        run: terraform fmt -check
 
-      # --- コメントが '/terraform plan' かどうかチェック ---
-      # issue_comment イベントの場合のみ実行され、コメントが指定コマンドか判断します。
-      - name: Check Comment Command
-        id: check-comment-command # 後続ステップで結果を参照するためのID
-        # ★条件★ issue_comment イベントの場合のみこのステップを実行します。
-        if: github.event_name == 'issue_comment'
+      - name: Check if directory is not empty
+        id: check
         run: |
-          COMMENT_BODY="${{ github.event.comment.body }}"
-          IS_PLAN_COMMAND=false
-          if [[ "$COMMENT_BODY" == "/terraform plan" ]]; then
-            IS_PLAN_COMMAND=true
-          fi
-          # 結果を出力変数として設定します (steps.check-comment-command.outputs.is_plan_command で参照)
-          echo "is_plan_command=$IS_PLAN_COMMAND" >> "$GITHUB_OUTPUT"
-        shell: bash # スクリプト実行にbashを使用することを明示
-
-      # --- ★追加デバッグステップ★ Determine ステップの出力を確認 ---
-      # 前のステップが設定した出力が、後続ステップでどう見えているかを確認します。
-      - name: Check should_run output after Determine
-        id: check_should_run_output
-        # このデバッグは常に実行します（直前のステップがスキップされても実行されるように）
-        if: always()
-        run: |
-          # steps.<step_id>.outputs.<output_name> の形式で出力を参照
-          # ${{...}} はGitHub Actionsが式を評価する構文です。
-          echo "Value of steps.run-condition.outputs.should_run = '${{ steps.run-condition.outputs.should_run }}'"
-        shell: bash
-
-      # ... (Setup Terraform ステップ)
-
-      # --- ★追加デバッグステップ★ Setup Terraform ステップの結論を確認 ---
-      # Setup Terraform ステップが実際にどのような結論になったかを確認します。
-      - name: Check Setup Conclusion
-        id: check_setup_conclusion
-        # このデバッグは常に実行します（直前のステップがスキップされても実行されるように）
-        if: always()
-        run: |
-          # steps.<step_id>.conclusion の形式でステップの結論を参照
-          # 結論は 'success', 'failure', 'cancelled', 'skipped' のいずれかになります。
-          echo "Conclusion of steps.setup-terraform = '${{ steps.setup-terraform.conclusion }}'"
-        shell: bash
-
-      # Terraform Initの実行
-      - name: Terraform Init
-        id: init # 後続ステップで結果を参照するためのID
-        # ★設定★ TF構成ファイルが存在するディレクトリを指定 (例: プロジェクトルートの場合 '.')
-        working-directory: .
-        # ★条件★ Setupが成功した場合のみ実行
-        if: steps.setup-terraform.conclusion == 'success'
-        run: terraform init -input=false # CI環境ではユーザー入力を求めない
-
-      # Terraform Validateの実行
-      - name: Terraform Validate
-        id: validate # 後続ステップで結果を参照するためのID
-        working-directory: . # ★設定★ TF構成ファイルのルートディレクトリ
-        # ★条件★ Initが成功した場合のみ実行
-        if: steps.init.conclusion == 'success'
-        run: terraform validate -no-color # カラー出力を無効化
-
-      # Terraform Planの実行
-      - name: Run terraform plan
-        id: plan # 後続ステップで結果を参照するためのID
-        working-directory: . # ★設定★ TF構成ファイルのルートディレクトリ
-        # ★条件★ Initが成功した場合のみ実行
-        if: steps.init.conclusion == 'success'
-        run: terraform plan -no-color # カラー出力を無効化
-
-      # Planの結果を整形してハイライト可能なdiff形式に変換
-      # Planが成功した場合のみ実行します。
-      - name: Reformat Plan
-        id: reformat_plan # 後続ステップで結果を参照するためのID
-        # ★条件★ Planが成功した場合のみ実行
-        if: steps.plan.conclusion == 'success'
-        run: |
-          # steps.plan.outputs.stdout は Plan の標準出力、steps.plan.outputs.stderr はエラー出力
-          # Planが成功した場合(conclusion == 'success')はstdoutに計画が出力されます。
-          # sed コマンドで diff 形式に整形 (行頭のスペースと +/- を入れ替える)
-          # sed コマンドが失敗した場合を考慮して || true を追加
-          PLAN_OUTPUT="${{ steps.plan.outputs.stdout }}"
-          echo "$PLAN_OUTPUT" | sed -E 's/^([[:space:]]+)([-+])/\2\1/g' > plan.txt || true
-        shell: bash # スクリプト実行にbashを使用することを明示
-
-      # 整形したPlanの内容を環境変数に入れる
-      # 整形ステップが成功した場合のみ実行します。
-      - name: Put Plan in Env Var
-        id: put_plan_env # 後続ステップで結果を参照するためのID
-        # ★条件★ 整形ステップが成功した場合のみ実行
-        if: steps.reformat_plan.conclusion == 'success'
-        run: |
-          # plan.txt ファイルが存在するか確認し、存在する場合のみ読み込み
-          if [ -f plan.txt ]; then
-            PLAN_CONTENT=$(cat plan.txt)
-            # GITHUB_ENV 環境変数ファイルに追記して環境変数 PLAN を設定します。
-            # ヒアドキュメント形式 (EOF) を使用します。
-            echo "PLAN<<EOF" >> "$GITHUB_ENV"
-            echo "$PLAN_CONTENT" >> "$GITHUB_ENV"
-            echo "EOF" >> "$GITHUB_ENV"
+          if [ "$(ls -A .)" ]; then
+            echo "Directory is not empty"
           else
-            echo "Plan output file plan.txt not found."
+            echo "Directory is empty"
+            exit 1
           fi
-        shell: bash # スクリプト実行にbashを使用することを明示
 
-      # PRコメントにPlanの結果を投稿
-      # PRイベントであり、かつPlan結果を環境変数に入れるステップが成功した場合のみ実行します。
-      - name: Read Plan and Post Comment
-        uses: actions/github-script@v7 # GitHub APIを操作するためのアクション
-        # ★条件★ Pull Request イベントであり、かつ Plan結果を環境変数に格納するステップが成功した場合のみ実行
-        if: github.event_name == 'pull_request' && steps.put_plan_env.conclusion == 'success'
+      - name: Terraform Init
+        id: init
+        run: terraform init
+
+      - name: Terraform Plan
+        id: plan
+        run: terraform plan -no-color
+        continue-on-error: true
+
+      - name: Comment PR
+        uses: actions/github-script@v3
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }} # GitHub提供のデフォルトトークンを使用
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-
-            // 1. Retrieve existing bot comments for the PR
-            // 将来的に複数のbotコメントがある場合を考慮して、特定の文字列を含むコメントを探します。
-            const commentIdentifier = ''; // コメント識別のための隠し文字列
-            const { data: comments } = await github.rest.issues.listComments({
+            const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outputs.stdout }}\`
+            #### Terraform Initialization ⚙️\`${{ steps.init.outputs.stdout }}\`
+            #### Terraform Plan 📖\`${{ steps.plan.outputs.stdout }}\``;
+            github.issues.createComment({
+              issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: context.issue.number,
-            });
-
-            const botComment = comments.find(comment => {
-              // Commented by a bot AND contains our identifier string
-              return comment.user.type === 'Bot' && comment.body.includes(commentIdentifier);
-            });
-
-            // 2. Prepare format of the comment
-            // 各ステップの結果 (success, failureなど) と環境変数に格納したPlan結果を使用してコメント本文を作成します。
-            const output = `
-              ${commentIdentifier}
-
-              #### Terraform Format Check 🖌\`${{ steps.fmt.outcome }}\`
-              #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
-              #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
-
-              <details><summary>Validation Output</summary>
-
-              \`\`\`terraform
-              ${{ steps.validate.outputs.stdout }} // Validate の標準出力
-              \`\`\`
-
-              </details>
-
-              #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
-
-              <details><summary>Show Plan</summary>
-
-              \`\`\`diff
-              ${{ env.PLAN }} // 環境変数に格納した整形済みPlan結果
-              \`\`\`
-
-              </details>
-
-              *Pusher: @${{ github.actor }}, Working Directory: \`${{ matrix.directory || '.' }}\`* // matrix.directory がない場合は '.' を表示
-
-              `; // コメント本文の末尾
-
-            // 3. If we have a comment, update it, otherwise create a new one
-            if (botComment) {
-              // 既存コメントがある場合、更新
-              await github.rest.issues.updateComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                comment_id: botComment.id,
-                body: output
-              });
-            } else {
-              // 既存コメントがない場合、新規作成
-              await github.rest.issues.createComment({
-                issue_number: context.issue.number,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                body: output
-              });
-            }
-
-      # --- ★Applyステップ★ ---
-      # Applyは master ブランチへのPush時のみ、かつ .tf ファイルに変更があった場合のみ実行します。
-      - name: Terraform Apply
-        id: apply # 後続ステップで結果を参照するためのID
-        working-directory: . # ★設定★ TF構成ファイルのルートディレクトリ (必要に応じて修正)
-        # ★条件★ Pushイベント AND masterブランチ AND .tf変更あり AND Init成功の場合のみ実行
-        # .tf変更の有無は check-tf-changes ステップの出力で判断します。
-        if: |
-          github.event_name == 'push' &&
-          github.ref == 'refs/heads/master' &&
-          steps.check-tf-changes.outputs.tf-changes == 'true' &&
-          steps.init.conclusion == 'success'
-
-        run: terraform apply -auto-approve -input=false # -auto-approve は確認なしに実行。本番環境では慎重に。
+              body: `## Terraform checks in directory '${{ matrix.directory }}'\n` + output
+            })
